# CAD_Processor

./: .gitignore  CAD_Processor.sln  CAD_Processor.vcxproj  CAD_Processor.vcxproj.filters  CMakeLists.txt  MyDxf_reader.hpp  README.md  main.cpp  sample.bak  sample.dxf  utils.h  vertex_shader.glsl
data/: sample.dwg  sample.dxf
include/: MyDxf_reader.hpp  earcut.hpp  glad.c  utils.h
shaders/: fragment_shader.glsl
src/: main.cpp  utils.cpp
